test/bad/tuples/decl03.px

t: Int*Bool = 1, true, ""
